add flowchart, fixed bug